# chart-analysis-claude

./: .gitignore  QUICKSTART.md  README.md  ROADMAP.html  START_ALL.md  docker-compose.yml
backend/: .dockerignore  .env.example  API_USAGE.md  Dockerfile  START_SERVER.md  pyproject.toml  pytest.ini  requirements.txt  test_indicators.py  train_model.py
backend/alembic/: env.py
backend/src/: main.py
backend/src/api/routers/: analysis.py  indicators.py  predictions.py  search.py  stocks.py
backend/src/core/: config.py  exceptions.py
backend/src/data/: stock_mappings.json
backend/src/infrastructure/: database.py
backend/src/infrastructure/api_clients/: yahoo_finance.py
backend/src/ml_models/: lstm_model.py
backend/src/models/: stock.py
backend/src/repositories/: __init__.py  prediction_repository.py  stock_repository.py
backend/src/schemas/: stock.py
backend/src/services/: error_correction_service.py  feature_engineering.py  fundamental_service.py  investment_score_service.py  prediction_service.py  preprocessing.py  stock_data_service.py  stock_search_service.py
backend/src/tasks/: __init__.py  prediction_tasks.py
backend/tests/: test_api_endpoints.py  test_stock_data_service.py  test_yahoo_finance_client.py
frontend/: index.html  package-lock.json  package.json  test-api.html
frontend/src/: App.jsx
frontend/src/components/: FavoriteButton.jsx  FavoriteCard.jsx  FavoriteGrid.jsx  FundamentalAnalysis.jsx  InvestmentScore.jsx  PredictionAccuracy.jsx  StockDashboard.jsx  StockSearch.jsx  TechnicalAnalysis.jsx
frontend/src/hooks/: useDebounce.js  useFavorites.js
