[tool.poetry]
name = "stock-analysis-backend"
version = "0.1.0"
description = "주가 예측 시스템 백엔드"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# FastAPI 및 ASGI 서버
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# 데이터베이스
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"

# Redis
redis = {extras = ["hiredis"], version = "^5.2.0"}
aioredis = "^2.0.1"

# 비동기 처리
celery = {extras = ["redis"], version = "^5.4.0"}
aiohttp = "^3.11.0"

# 데이터 수집
yfinance = "^0.2.49"
pandas = "^2.2.0"
numpy = "^2.2.0"

# 머신러닝
torch = "^2.5.0"
tensorflow = "^2.18.0"
scikit-learn = "^1.6.0"
xgboost = "^2.1.0"
optuna = "^4.1.0"
shap = "^0.46.0"

# 기술적 지표
ta-lib-bin = {version = "^0.4.29", markers = "sys_platform == 'win32'"}
pandas-ta = "^0.3.14b"

# 백테스팅
backtrader = "^1.9.78"

# 유틸리티
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
structlog = "^24.4.0"
python-multipart = "^0.0.17"

# 보안
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
# 테스팅
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.0"

# 코드 품질
ruff = "^0.8.0"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

# Jupyter
jupyter = "^1.1.0"
ipykernel = "^6.29.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "backtrader.*",
    "ta.*",
    "pandas_ta.*",
    "yfinance.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
